<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/ic_action_home" />

    <item
        android:id="@+id/nav_pronunciation"
        android:title="@string/nav_pronunciation"
        android:icon="@drawable/ic_action_pronunciation" />

    <item
        android:id="@+id/nav_rhymes"
        android:title="@string/nav_rhymes"
        android:icon="@drawable/ic_action_rhymes" />

    <item
        android:id="@+id/nav_frequency"
        android:title="@string/nav_frequency"
        android:icon="@drawable/ic_action_frequency" />

    <item
        android:id="@+id/nav_images"
        android:title="@string/nav_images"
        android:icon="@drawable/ic_action_image" />

    <item
        android:id="@+id/nav_settings"
        android:title="@string/nav_settings"
        android:icon="@drawable/ic_nav_settings" />

    <item
        android:id="@+id/nav_helper"
        android:title="@string/nav_helper"
        android:icon="@drawable/ic_action_helper" />

</menu>