<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/LightSlateGray"
    tools:context=".WordPronunciationActivity">

    <TextView
        android:id="@+id/word_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold|italic"
        android:textColor="@color/White"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:gravity="center" />


    <LinearLayout
        android:id="@+id/all_pronunciation_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@color/White">

        <TextView
            android:id="@+id/all_pronunciation_header_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/all_pronunciation_header"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:gravity="center"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/all_pronunciation_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/noun_pronunciation_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@color/White">

        <TextView
            android:id="@+id/noun_pronunciation_header_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/noun_pronunciation_header"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:gravity="center"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/noun_pronunciation_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/verb_pronunciation_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@color/White">

        <TextView
            android:id="@+id/verb_pronunciation_header_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/verb_pronunciation_header"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:gravity="center"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/verb_pronunciation_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

</LinearLayout>